--- a/css/art.css
+++ b/css/art.css
@@ -6,7 +6,7 @@ h1 {
     color: black;
 	font-family: 'Love Ya Like A Sister', cursive;
     text-align: center;
-	font-size: 50px;
+	font-size: 100px;
 }
 
 h2 {
@@ -17,27 +17,59 @@ h2 {
 }
 
 h3 {
-    color: white;
-	font-family: 'Anton', sans-serif;
+    color: black;
+	font-family:  'Love Ya Like A Sister', cursive;
     text-align: center;
 	font-size: 20px;
 }
 
-div {
-	color: blue;
-	font-family: 'Covered By Your Grace', cursive; 
+h4 {
+    color: black;
+	font-family:  'Love Ya Like A Sister', cursive;
+    text-align: left;
+	font-size: 20px;
 }
 
+
+
 p {
-	font-family: 'Gamja Flower', cursive;
+	font-family: 'Love Ya Like A Sister', cursive;
     font-size: 20px;
 }
 
-aside {
-	align: left;
-	text-align: center;
-	font-family: 'Covered By Your Grace', cursive; 
+
+nav
+{
+float: left;
+width: 100%;
+height: 5%;
+background-color: blue;
 }
-	
+
+section
+{
+float: center;
+
+width: 80%;
+height: 80%;
+background-color: beige;
+
+}
+
+article
+{
+float: center;
+width: 50%;
+height: 45%;
+
+outline: 1px solid invert;
+}
+
+
+
+.image 
+{
+	width: 10%;
+	height: 10%;
 
 }
