--- a/css/art.css
+++ b/css/art.css
@@ -1,13 +1,23 @@
-
 body {
-    background-color: black;
+	background-image: url('../texture/textur5.jpg');
+	background-size:cover;
 }
+
 h1 {
-    color: black;
+    color: white;
 	font-family: 'Love Ya Like A Sister', cursive;
     text-align: center;
 	font-size: 100px;
 }
+
+header{
+	background-image: url('../asset/color1.jpg');
+	background-size:cover;
+	height:150px;
+	color: white;
+	font-family: 'Gamja Flower', cursive;
+	text-align: center;
+	font-size: 100px;
 
 h2 {
     color: white;
@@ -18,7 +28,7 @@ h2 {
 
 h3 {
     color: black;
-	font-family:  'Love Ya Like A Sister', cursive;
+	font-family:'Love Ya Like A Sister', cursive;
     text-align: center;
 	font-size: 20px;
 }
@@ -30,46 +40,31 @@ h4 {
 	font-size: 20px;
 }
 
-
-
 p {
 	font-family: 'Love Ya Like A Sister', cursive;
-    font-size: 20px;
+	font-size: 20px;
+	background-color: rgb(255, 255, 255);
 }
-
 
 nav
 {
-float: left;
-width: 100%;
-height: 5%;
-background-color: blue;
+	float: left;
+	width: 100%;
+	height: 5%;
+	background-color: blue;
 }
 
 section
 {
-float: center;
-
-width: 80%;
-height: 80%;
-background-color: beige;
-
-}
-
-article
-{
-float: center;
-width: 50%;
-height: 45%;
-
-outline: 1px solid invert;
+	width: 90%;
+	height: 90%;
+	background-color: beige;
+	text-align: center;
+	margin: auto;
 }
 
 
-
-.image 
-{
-	width: 10%;
-	height: 10%;
-
+li{
+	text-shadow: 2px 2px black;
 }
+
