--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3830,7 +3830,8 @@ input[type="button"].btn-block {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding-left: 0;
-  margin-bottom: 0;
+  padding-top: 20px;
+  margin-bottom: 20px;
   list-style: none;
 }
 
@@ -3852,7 +3853,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs .nav-item {
-  margin-bottom: -1px;
+  margin-bottom: -50px;
 }
 
 .nav-tabs .nav-link {
