--- a/css/tahiti.css
+++ b/css/tahiti.css
@@ -6,13 +6,13 @@ div#slider figure{
     padding: 0;
     font-size: 0;
     text-align: left;
-    animation: 30s slidy infinite;
+    animation: 20s slidy infinite;
     }
 
 div#slider figure img{
     width:20%;
     height: auto;
-    float:left;
+    float:center;
     }    
 
 div#slider{
@@ -32,4 +32,11 @@ div#slider{
     95% {left: -300%;}
     100% {left: 400%;}
         
+}
+
+h3 {
+    color: black;
+	font-family:'Love Ya Like A Sister', cursive;
+    text-align: center;
+	font-size: 20px;
 }
